styles/style.css
body {
  margin: 0;
  font-family: "Comfortaa", cursive;
  text-align: center;
  background-color: #fffeb7;
  color: #583c87;
  /* overflow-x: hidden; */
}
h4 {
  font-size: 18px;
  font-weight: 900;
}

.li {
  display: inline;
  list-style: none;
}
hr {
  margin-top: 30px;
  margin-left: 48%;
  border-style: dashed none none;
  border-color: #e45a84;
  border-width: 8px;
  width: 5%;
}

h2 {
  margin-top: 25px;
  color: #e45a84;
  font-family: "Love Ya Like A Sister", cursive;
  font-size: 40px;
}
a,
a:hover {
  /* display: inline; */
  text-decoration: none;
  color: inherit;
}
footer {
  margin: 0;
  padding-top: 30px;
  background-color: #3e1e68;
  color: #fffeb7;
  font-size: 12px;
}
/* CLASSES */

.nav-link {
  border-radius: 10px;
}
.nav-link:hover {
  background-color: #fffeb7;
  color: #3e1e68;
  border-radius: 10px;
  position: relative;
  right: 5px;
  font-weight: bold;
}
@media screen and (max-width: 768px) {
  .nav-link:hover {
    background-color: initial;
    color: #fffeb7;
    border-radius: initial;
    position: initial;

    font-weight: bold;
  }
}
.spacer {
  height: 100px;
}
.spacer-bottom {
  height: 100px;
}
.spacer-sm {
  padding: 18px 0;
}
.pad {
  padding: 0 20%;
  font-size: 24px;
  color: #e45a84;
}
.hero-section {
  background: url("../resources/hero.jpg");

  background-size: cover;
  background-position: bottom;
  background-attachment: fixed;
  height: max-content;
}
.image-edit {
  border-radius: 50%;
  width: 150px;
  height: auto;
}
.image-re {
  border-radius: 25px;
  width: 350px;
}
.logo {
  margin-top: 50%;
}
.logo-width {
  width: 80%;
}
.im-width {
  width: 100px;
  border-radius: 0;
  cursor: pointer;
}
.margin {
  margin: 0 10%;
  padding-top: 3%;
}

.btn-linkedin {
  border: 2px solid #583c87;
  color: #583c87;
  margin-left: 2%;
}
.btn-linkedin:hover {
  border-color: #0a66c2;
  background-color: #0a66c2;
  color: white;
  position: relative;
  top: 5px;
}
.git-btn {
  background-color: #3e1e68;
  color: white;
  margin: 25px 0;
}
.git-btn:hover {
  background-color: black;
  color: white;
  position: relative;
  top: 5px;
}
.view-re {
  background-color: #3e1e68;
  color: white;
}
.view-re:hover {
  position: relative;
  top: 5px;
}
.projects {
  background: url("../resources/project.jpg");
  background-size: cover;
  background-position: bottom;
  background-attachment: fixed;
}

.card {
  /* width: 20rem; */

  /* margin-left: 20px;
  margin-right: 20px; */
  margin-top: 30px;
  box-shadow: 0px 0px 5px #583c87;
}

.card:hover {
  position: relative;
  bottom: 5px;
  box-shadow: 0 0 8px #3e1e68;
}
.card img {
  width: 10rem;
}

.resume-hero {
  background: url("../resources/r-hero.jpg");
  background-size: cover;
  background-repeat: no-repeat;
  background-position: top;
  background-attachment: fixed;
  height: max-content;
}
.skills {
  padding: 5% 0;
  background: url("../resources/skill.jpg");
  height: max-content;
  background-size: cover;
  background-position: top;
  background-attachment: fixed;
}
.alignment {
  text-align: left;
}
.fa {
  /* padding: px; */
  font-size: 20px;
  width: 30px;
  text-align: center;
  text-decoration: none;
  border-radius: 20px;
}
.fa:hover {
  position: relative;
  bottom: 2px;
}

.mar {
  margin-bottom: 2%;
}
.margin-am {
  margin: 3% 5%;
}

.foot {
  text-align: right;
  margin-bottom: 15px;
  margin-right: 15px;
}
.foot-nav {
  text-align: left;
}
/* ID */
#icon {
  width: 45px;
  height: auto;
}
#icon:hover,
.image-edit:hover {
  position: relative;
  bottom: 5px;
}
#intro,
#r-intro {
  font-family: "Love Ya Like A Sister", cursive;
  font-size: 64px;
  color: #3e1e68;
}
#contact {
  height: 100vh;
}
#c-h2 {
  font-size: 64px;
  color: #583c87;
}

